app/assets/stylesheets/application.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
 * vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
 * files in this directory. Styles in this file should be added after the last require_* statement.
 * It is generally better to create a new file per style scope.
 *
 *= require jquery-ui/tooltip
 *= require cropper
 *= require commontator/application
 */

@import "font-awesome-sprockets";
@import "font-awesome";
// import of uswds files matter, see: https://designsystem.digital.gov/documentation/developers/#sass-and-theme-settings
@import 'dm_uswds/theme/uswds-theme-general';
@import 'dm_uswds/theme/uswds-theme-typography';
@import 'dm_uswds/theme/uswds-theme-spacing';
@import 'dm_uswds/theme/uswds-theme-color';
@import 'dm_uswds/theme/uswds-theme-utilities';
@import "uswds/uswds";
@import 'dm_uswds/theme/uswds-theme-custom-styles';
@import "dm_uswds/theme/uswds-theme-components";
@import "../stylesheets/commontator/**/*";
@import "../stylesheets/dm/elements";
@import "../stylesheets/dm/**/*";

// TODO: move these styles
#main-content {
  position: relative;
  // Add padding equal to the height of the current footer plus 64px/128px for spacing between 'Return to top' button and the element above it based on Figma designs 9/21/21

  // Mobile footer height + 64px
  padding-bottom: 580px;

  @media screen and (min-width: 1024px) {
    // Desktop footer height + 128px
    padding-bottom: 337px;
  }

  &.home, &.search {
    padding-bottom: 446px;

    @media screen and (min-width: 1024px) {
      // Desktop footer height + 128px
      padding-bottom: 139px !important;
    }
  }
}

.practice-editor-long-rect-svg{
  height: 4px;

  @media screen and (min-width: 1024px) {
    width: 726px;
  }
}

.overview_error_msg {
  display: none;
  margin-top: 0;
  width: 300px;
}

#more_text, #more_text_award, #more_text_origin_story {
  display: none;
}

.close-alert-message {
  top: 50%;
  transform: translateY(-50%);
}

